--- a/views/pokemon.ejs
+++ b/views/pokemon.ejs
@@ -1,3 +1,5 @@
+<%- include('header.ejs') %>
+
 <link rel="stylesheet" href="/inc/styles.css">
     <div id="pokemoni">
         <div class="pokemon">
@@ -32,3 +34,4 @@
             </div>
         </div>
     </div>
+<%- include('footer.ejs') %>
