--- a/views/generation.ejs
+++ b/views/generation.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
-    <link rel="stylesheet" href="/inc/styles.css">
-</head>
+<%- include('header.ejs') %>
+
 <body>
     <h1>Pokedex</h1>
     <div>
@@ -17,5 +11,4 @@
             <% } %>
         </ul>
     </div>
-</body>
-</html>
+<%- include('footer.ejs') %>
